--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       height: 100vh;
       margin: 0;
     }
+
     .login-container {
       background: #fff;
       padding: 30px;
@@ -21,10 +22,12 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       width: 300px;
     }
+
     .login-container h2 {
       text-align: center;
       margin-bottom: 20px;
     }
+
     .login-container input {
       width: 100%;
       padding: 10px;
@@ -32,6 +35,8 @@
       border: 1px solid #ccc;
       border-radius: 8px;
     }
+
+    /* Blinking login button */
     .login-container button {
       width: 100%;
       padding: 10px;
@@ -41,9 +46,18 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
+      animation: blink 1s infinite; /* Blink animation */
     }
+
     .login-container button:hover {
       background: #45a049;
+    }
+
+    /* Keyframes for blinking effect */
+    @keyframes blink {
+      0%   { opacity: 1; }
+      50%  { opacity: 0.4; }
+      100% { opacity: 1; }
     }
   </style>
 </head>
